examples/test/testpolicy19577.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19577
  namespace: namespace47
spec:
  podSelector:
    matchLabels:
      key5: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value3
          key20: value2
          key21: value4
      podSelector:
        matchLabels:
          key25: value23
          key28: value1
          key43: value34
